[gd_scene load_steps=4 format=3 uid="uid://cs8mr85o7k8j0"]

[ext_resource type="Script" path="res://Prefabs/UI/exam_step_ui.gd" id="1_1eybx"]
[ext_resource type="PackedScene" uid="uid://c2trqd1msp06a" path="res://Prefabs/UI/item_cell.tscn" id="2_yt4ep"]

[sub_resource type="LabelSettings" id="LabelSettings_7njo6"]
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="ExamStepUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_1eybx")
passing_time = 60
start_solving_value = 500.0
max_chance = 101
prepare_scene_packed = "res://Prefabs/UI/middle_step_ui.tscn"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 400)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 1000.0
fill_mode = 3
show_percentage = false

[node name="BarLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exam solving"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "60"
label_settings = SubResource("LabelSettings_7njo6")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/separation = 15

[node name="ItemCell" parent="MarginContainer/HBoxContainer2" instance=ExtResource("2_yt4ep")]
layout_mode = 2

[node name="ItemCell2" parent="MarginContainer/HBoxContainer2" instance=ExtResource("2_yt4ep")]
layout_mode = 2

[node name="ItemCell3" parent="MarginContainer/HBoxContainer2" instance=ExtResource("2_yt4ep")]
layout_mode = 2

[node name="PassingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="value_changed" from="MarginContainer/HBoxContainer/ProgressBar" to="." method="bar_value_changed"]
